# geo-green

./: .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
requirements/: base.txt  dev.txt  prod.txt
src/geo_green/: __init__.py  main.py
tests/: test_main.py
